2024-09-13T00:36:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10840918831 # 417
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-13
* notice: last 14d: unq all: 10 42
* notice: prev accum: outdated-unq outdated-all / unq all: 357 1280 / 366 1320
* notice: next accum: outdated-unq outdated-all / unq all: 357 1280 / 367 1322
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-09-12]

2024-09-12T00:36:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10821921259 # 416
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-12
* notice: last 14d: unq all: 9 40
* notice: prev accum: outdated-unq outdated-all / unq all: 357 1280 / 365 1316
* notice: next accum: outdated-unq outdated-all / unq all: 357 1280 / 366 1320
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
* notice: removed / changed dates: [] / [2024-09-11]

2024-09-11T00:36:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10802816518 # 415
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-11
* notice: last 14d: unq all: 8 36
* notice: prev accum: outdated-unq outdated-all / unq all: 357 1280 / 364 1298
* notice: next accum: outdated-unq outdated-all / unq all: 357 1280 / 365 1316
* notice: prev exec diff / last date diff / accum: unq all: +1 +18 -0 -0 / +1 +18 -0 -0 / 1 18
* notice: removed / changed dates: [] / [2024-09-10]

2024-09-10T00:36:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10783582454 # 414