@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-09-13T00:36:27Z",
+  "timestamp" : "2024-09-14T00:35:57Z",
   "count_outdated" : 1280,
   "uniques_outdated" : 357,
-  "count" : 1322,
-  "uniques" : 367,
+  "count" : 1324,
+  "uniques" : 368,
   "views" : [
     {
       "timestamp": "2024-08-31T00:00:00Z",
@@ -70,6 +70,15 @@
     },
     {
       "timestamp": "2024-09-12T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-13T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
