@@ -1,6 +1,6 @@
 {
-  "count": 42,
-  "uniques": 10,
+  "count": 44,
+  "uniques": 11,
   "views": [
     {
       "timestamp": "2024-08-31T00:00:00Z",
@@ -39,6 +39,11 @@
     },
     {
       "timestamp": "2024-09-12T00:00:00Z",
+      "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-09-13T00:00:00Z",
       "count": 2,
       "uniques": 1
     }
